Fri Feb 23 20:02:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - various: use "timehead.h"

Tue Feb 20 15:53:00 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - drivers/megatec.c: Removed changed debugging statement left in by
   mistake.

Mon Feb 19 16:54:41 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - drivers/megatec_usb.c: the addition of endpoint to usb_ups_t definition.
   This allows different endpoint values for each of the supported UPSs.

Sat Feb 17 16:14:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.ch: the addition of "_t" to type names hides the fact that
   safenet_t is a union (removed typedef, since it is not useful anyway)

Fri Feb 16 22:51:41 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - various: EOF is not an exit code for getopt(3). 
 - drivers/main.c, drivers/main-hal.c: do not ignore extra parameters on
   the command line; print an error instead. 
	
Fri Feb 16 22:10:13 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - merged experimental megatec_usb driver to trunk. Note: still need
   to fix matching code, add man page, and update data/driver.list.

Fri Feb 16 22:01:31 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - various: added "_t" to type names

Fri Feb 16 21:55:31 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - hotplug/udev: added hotplugging rules for various USB devices
 - usbhid-ups: added product id for Belkin F6C100-UNV
	
Fri Feb 16 20:29:10 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - various: remove superfluous checks for NULL pointers before calling free()

Fri Feb 16 20:24:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: declare data stale after three consecutive failures
   to poll the UPS (instead of immediately) so that we don't bother clients
   if we miss a poll

Fri Feb 16 20:22:18 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
