@@ -1,0 +1,3 @@
+libhidups
+Makefile.in
+Makefile
