@@ -1,0 +1,8 @@
+
+if WITH_HOTPLUG
+ hotplugusbdir = $(hotplugdir)/usb
+ dist_hotplugusb_DATA = libhid.usermap
+ hotplugusb_SCRIPTS = libhidups
+endif
+
+EXTRA_DIST = README
